--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -3,22 +3,24 @@
 
 main {
   @include dimensions(auto, 100%);
-  margin-top: 2rem;
-  overflow: hidden;
-  display:flex;
+  padding:3rem 0;
+
+  display: flex;
   flex-direction: column;
   align-content: space-between;
 
-  .divider{
-    @include dimensions(120vw,5rem);
-    background-color: $bg-color-3;
+  .divider {
+    @include dimensions(120vw, 5rem);
+
+    background-color: $bg-color-2;
     transform: rotate(5deg) translateX(-5%);
     z-index: -3;
   }
-}
-section {
-  @include dimensions(80%, 70vh);
-  margin: auto;
+
+  section {
+    @include dimensions(80%, 70vh);
+    margin: auto;
+  }
 }
 
 .adverts {
@@ -29,31 +31,38 @@ section {
     "main second"
     "main third"
     "main fourth";
-  box-shadow:$shadow;
-  color:$font-color-3;
+
   font-family: $text-font;
-  font-size:0.7rem;
-  
-  &  figure{
+  font-size: 0.7rem;
+
+  box-shadow: $shadow;
+
+  -webkit-animation: fade-in 1s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+  animation: fade-in 1s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+
+  & figure {
     @include dimensions(100%, 100%);
-    position:relative;
+    position: relative;
+
     transition: $transition;
     overflow: hidden;
   }
   & figcaption {
-    @include dimensions(100%,max-content);
-    padding:5%;
-    position:absolute;
-    bottom:-100%;
+    @include dimensions(100%, max-content);
+    padding: 5%;
+
+    position: absolute;
+    bottom: -100%;
+
     transition: $transition;
     background-color: $backdrop-color;
 
     h4 {
-      font-weight:700;
       margin-bottom: 2px;
+      
+      font-weight: 700;
     }
   }
-
 
   & img {
     @include dimensions(100%, 100%);
@@ -61,9 +70,9 @@ section {
 
   & figure:hover {
     transform: scale(1.3);
-    z-index:2;
+    z-index: 2;
 
-    & figcaption{
+    & figcaption {
       bottom: 0;
     }
   }
@@ -86,3 +95,19 @@ section {
   }
 }
 
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
