--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,26 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Raleway:wght@300&family=Special+Elite&display=swap');
 
-$bg-color-1: #ffffff; 
-$backdrop-color:rgba(0, 0, 0, 0.383);
-$bg-color-3:#bae8e8;
-$nav-bg-color : #272343; 
-
-$font-color-1:#808080;
-$font-color-2:#0e0e0e;
-$font-color-3:#ffffff;
-
-$link-font:'Raleway', sans-serif;
-$text-font:'Nunito', sans-serif;
-
-$shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
-$transition:0.3s;
+$bg-color-1: #ffffff;
+$bg-color-2: #bae8e8;
+$bg-color-3: #e3f6f5;
+$backdrop-color: rgba(0, 0, 0, 0.202);
+$nav-bg-color: #272343;
+$nav-bg-color-light: #7277d6;
+$gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
 
 
-// .third-color { 
-// 	background: #e3f6f5; 
-// }
+$font-color-1: #808080;
+$font-color-2: #0e0e0e;
+$font-color-3: #ffffff;
 
-// .fourth-color { 
-// 	background: #bae8e8; 
+$link-font: "Raleway", sans-serif;
+$text-font: "Nunito", sans-serif;
+$error-font:'Special Elite', sans-serif;
+
+$shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+$shadow-2: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+  rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+$transition: 0.3s;
+
+
+// .fourth-color {
+// 	background: #bae8e8;
