--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -7,7 +7,7 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
 
   background: $nav-bg-color;
 
@@ -16,7 +16,7 @@
 
     font-family: $text-font;
     text-align: center;
-    
+
     li {
       margin: 1rem;
     }
