--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,9 +20,8 @@ $error-font:'Special Elite', sans-serif;
 $shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 $shadow-2: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
   rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+$shadow-inset:rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
 $transition: 0.3s;
 
 
-// .fourth-color {
-// 	background: #bae8e8;
