--- a/src/Components/404/404.scss
+++ b/src/Components/404/404.scss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.scss";
-@import "../../styles/variables.scss";
+@import "../../main-styles/mixins.scss";
+@import "../../main-styles/variables.scss";
 
 .message-container {
   @include dimensions(60%, max-content);
