--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.scss";
-@import "../../styles/variables.scss";
+@import "../../main-styles/mixins.scss";
+@import "../../main-styles/variables.scss";
 
 .footer {
   @include dimensions(100%, max-content);
