--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.scss";
-@import "../../styles/variables.scss";
+@import "../../main-styles/mixins.scss";
+@import "../../main-styles/variables.scss";
 
 main {
   @include dimensions(auto, 100%);
