--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.scss";
-@import "../../styles/variables.scss";
+@import "../../main-styles/mixins.scss";
+@import "../../main-styles/variables.scss";
 
 .backdrop {
   @include dimensions(100vw, 100vh);
