--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.scss";
-@import "../../styles/variables.scss";
+@import "../../main-styles/mixins.scss";
+@import "../../main-styles/variables.scss";
 
 header {
   @include dimensions(100%, 3.5rem);
