--- a/src/Components/404/404.module.scss
+++ b/src/Components/404/404.module.scss
@@ -1,22 +1,26 @@
 @import "../../main-styles/mixins.scss";
 @import "../../main-styles/variables.scss";
 
-.message-container {
-  @include dimensions(60%, max-content);
-  min-width: 300px;
-  position: relative;
+.main {
+  margin:2rem auto auto 0;
+  
+  text-align: center;
+  color: $font-color-3;
+}
 
+.message-box {
+  @include dimensions(60%, max-content);
+  position: relative;
   margin: 0 auto;
   padding: 3rem 0.5rem;
+  min-width: 300px;
 
   background: $gradient-blue;
-  box-shadow: $shadow-2;
   border-radius: 50px 10px 50px 10px;
-
-  text-align: center;
+  box-shadow: $shadow-2;
+  
   font-size: 1.5rem;
   font-family: $link-font;
-  color: $font-color-3;
 
   z-index: 1;
 
@@ -26,18 +30,18 @@
   a:link {
     width: max-content;
     padding: 1.2rem;
-
     position: absolute;
     bottom: -2rem;
+    transform: translateX(-50%);
 
     border-radius: 30px;
     background-color: $nav-bg-color-light;
+    box-shadow: inherit;
+
     font-family: $text-font;
     color: inherit;
 
-    box-shadow: inherit;
     transition: $transition;
-    transform: translateX(-50%);
   }
 
   a:hover {
@@ -46,11 +50,12 @@
   }
 }
 
-.image-container {
+.image-box {
   margin: 0 auto;
 
   & img {
     @include dimensions(60vh, 60vh);
+    
     filter: hue-rotate(25deg);
   }
 }
