--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -1,21 +1,12 @@
 @import "../../main-styles/mixins.scss";
 @import "../../main-styles/variables.scss";
 
-main {
+.main {
   @include dimensions(auto, 100%);
-  padding:3rem 0;
-
+  padding: 3rem 0;
   display: flex;
   flex-direction: column;
   align-content: space-between;
-
-  .divider {
-    @include dimensions(120vw, 5rem);
-
-    background-color: $bg-color-2;
-    transform: rotate(5deg) translateX(-5%);
-    z-index: -3;
-  }
 
   section {
     @include dimensions(80%, max-content);
@@ -34,7 +25,6 @@ main {
 
   font-family: $text-font;
   font-size: 0.7rem;
-
   box-shadow: $shadow;
 
   -webkit-animation: fade-in 1s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
@@ -47,19 +37,19 @@ main {
     transition: $transition;
     overflow: hidden;
   }
+
   & figcaption {
     @include dimensions(100%, max-content);
-    padding: 5%;
-
+    padding: 0.7rem;
     position: absolute;
     bottom: -100%;
 
-    transition: $transition;
     background-color: $backdrop-color;
+    transition: $transition;
 
     h4 {
       margin-bottom: 2px;
-      
+
       font-weight: 700;
     }
   }
@@ -83,7 +73,6 @@ main {
   & figure:nth-child(1):hover {
     transform: scale(1.03);
   }
-
   & figure:nth-child(2) {
     grid-area: second;
   }
@@ -110,4 +99,12 @@ main {
   100% {
     opacity: 1;
   }
+}
+
+.divider {
+  @include dimensions(120vw, 5rem);
+
+  background-color: $bg-color-2;
+  transform: rotate(5deg) translateX(-5%);
+  z-index: -3;
 }
