--- a/src/Components/Catalogue/Catalogue.module.scss
+++ b/src/Components/Catalogue/Catalogue.module.scss
@@ -2,11 +2,109 @@
 @import "../../main-styles/variables.scss";
 
 .main {
-    display:flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
+
 .card-container {
-  @include dimensions(100%,max-content);
-  display:flex;
-  flex-direction: row wrap;
+  @include dimensions(100%, max-content);
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-between;
+  justify-content: center;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  margin: 3rem 0;
+}
+
+.link-wrapper {
+  @include dimensions(20%, max-content);
+  display: inline-block;
+  padding-bottom: 1rem;
+  box-shadow: $shadow-2;
+  color: $font-color-2;
+  background-color: rgba(119, 136, 153, 0.095);
+  border-radius: 25px;
+  overflow: hidden;
+  transition: $transition;
+
+  &:hover {
+    box-shadow: $shadow;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+
+  & h6,
+  & p {
+    padding: 0.5rem 0 0.5rem 1rem;
+  }
+
+  & h6 {
+    @include dimensions(90%,auto);
+    line-clamp: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 1.5rem;
+    font-weight: 600;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-color: $font-color-1;
+  }
+}
+
+.gallery {
+  @include dimensions(100%, 13rem);
+  position: relative;
+  overflow: hidden;
+
+  & div {
+    @include dimensions(100%, max-content);
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    transition: $transition;
+
+    & img {
+      @include dimensions(100%, 100%);
+    }
+  }
+
+  button {
+    position: absolute;
+    top: 50%;
+    border: none;
+    transform: translateY(-50%);
+    background-color: rgba(119, 136, 153, 0.304);
+    padding: 0.5rem;
+    cursor: pointer;
+    transition: $transition;
+
+    & img {
+      @include dimensions(20px, 20px);
+      filter: invert(50%);
+      transition: $transition;
+    }
+
+    &:hover {
+      background-color: $font-color-3;
+
+      & img {
+        filter: invert(0);
+      }
+    }
+  }
+}
+
+.button-backward {
+  border-radius: 0 25% 25% 0;
+  left: 0;
+}
+
+.button-forward {
+  border-radius: 25% 0 0 25%;
+  right: 0;
 }
