--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -3,6 +3,7 @@
 $bg-color-1: #ffffff;
 $bg-color-2: #bae8e8;
 $bg-color-3: #e3f6f5;
+$bg-color-4:rgba(119, 136, 153, 0.211);
 $backdrop-color: rgba(0, 0, 0, 0.202);
 $nav-bg-color: #272343;
 $nav-bg-color-light: #7277d6;
