--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -2,12 +2,12 @@
 @import "../../main-styles/variables.scss";
 
 .main-container {
-  @include dimensions(75%, max-content);
+  @include dimensions(80%, max-content);
   margin: 2rem auto;
   padding: 1rem;
   display: grid;
-  grid-template-columns: 4fr 0.5fr 1.2fr;
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: 55vw 0.5fr 1.2fr;
+  grid-template-rows: repeat(5, 13rem);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   justify-items: stretch;
@@ -23,33 +23,30 @@
   box-shadow: $shadow-2;
   background-color: $bg-color-1;
 
-  & div {
-    background-color: $bg-color-4;
-  }
-
-  & div:nth-child(1) {
+  & > div:nth-child(1) {
     grid-area: gallery;
-    background-color: $bg-color-1;
   }
 
-  & div:nth-child(2) {
+  & > div:nth-child(2) {
     grid-area: details;
   }
-  & div:nth-child(3) {
+  & > div:nth-child(3) {
     grid-area: description;
   }
-  & div:nth-child(4) {
+  & > div:nth-child(4) {
     grid-area: contacts;
   }
 }
 
 .contacts,
-.description {
+.description,
+.technicals {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
 
+  background-color: $bg-color-4;
   color: $font-color-2;
   border-radius: 10px;
 
@@ -59,14 +56,20 @@
     margin: 0 5px -5px 0;
   }
 
-  h4 {
+  h4,
+  h5 {
     padding-bottom: 1rem;
 
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
+    line-height: 2rem;
 
     border-bottom: 2px solid $bg-color-4;
+  }
+  sup {
+    vertical-align: super;
+    font-size: 0.7rem;
   }
 }
 
@@ -76,4 +79,33 @@
     overflow: auto;
     line-height: 1.5rem;
   }
+}
+
+.technicals {
+  text-align: center;
+
+  p {
+    font-size: 1.2rem;
+    background-color: $nav-bg-color-light;
+    color: $font-color-3;
+    padding: 0.5rem;
+  }
+
+  h5 {
+    font-size: 1.1rem;
+  }
+
+  th,
+  td {
+    padding: 0.5rem 0;
+    text-align: start;
+  }
+
+  th {
+    font-weight: 600;
+  }
+}
+
+.gallery {
+  background-color: $bg-color-1;
 }
