--- a/src/Components/Catalogue/Catalogue.module.scss
+++ b/src/Components/Catalogue/Catalogue.module.scss
@@ -15,24 +15,25 @@
   justify-content:center;
   column-gap: 1rem;
   row-gap: 1rem;
-}
 
-.link-wrapper {
-  @include dimensions(18rem, max-content);
-  display: inline-block;
-  padding-bottom: 1rem;
-
-  box-shadow: $shadow-2;
-  color: $font-color-2;
-  background-color: $bg-color-4;
-  border-radius: 25px;
-  overflow: hidden;
-  transition: $transition;
-
-  &:hover {
-    box-shadow: $shadow;
+  & a {
+    @include dimensions(18rem, max-content);
+    display: inline-block;
+    padding-bottom: 1rem;
+  
+    box-shadow: $shadow-2;
+    color: $font-color-2;
+    background-color: $bg-color-4;
+    border-radius: 25px;
+    overflow: hidden;
+    transition: $transition;
+  
+    &:hover {
+      box-shadow: $shadow;
+    }
   }
 }
+
 
 .card {
   display: flex;
