--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -2,20 +2,20 @@
 @import "../../main-styles/variables.scss";
 
 .main-container {
-  @include dimensions(80%, max-content);
+  @include dimensions(clamp(500px, 90%, 1000px), max-content);
   margin: 2rem auto;
   padding: 1rem;
   display: grid;
-  grid-template-columns: 55vw 0.5fr 1.2fr;
+  grid-template-columns: 5fr 0.5fr 1.7fr;
   grid-template-rows: repeat(5, 13rem);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas:
-    "gallery details details"
-    "gallery details details"
-    "gallery details details"
+    "gallery technicals technicals"
+    "gallery technicals technicals"
+    "gallery technicals technicals"
     "description description contacts"
     "description description contacts";
 
@@ -23,16 +23,6 @@
   box-shadow: $shadow-2;
   background-color: $bg-color-1;
 
-  & > div:nth-child(1) {
-    grid-area: gallery;
-  }
-
-  & > div:nth-child(2) {
-    grid-area: details;
-  }
-  & > div:nth-child(3) {
-    grid-area: description;
-  }
   & > div:nth-child(4) {
     grid-area: contacts;
   }
@@ -48,6 +38,7 @@
 
   background-color: $bg-color-4;
   color: $font-color-2;
+
   border-radius: 10px;
 
   img {
@@ -67,13 +58,11 @@
 
     border-bottom: 2px solid $bg-color-4;
   }
-  sup {
-    vertical-align: super;
-    font-size: 0.7rem;
-  }
 }
 
 .description {
+  grid-area: description;
+
   p {
     max-height: 200px;
     overflow: auto;
@@ -83,6 +72,7 @@
 
 .technicals {
   text-align: center;
+  grid-area: technicals;
 
   p {
     font-size: 1.2rem;
@@ -93,6 +83,11 @@
 
   h5 {
     font-size: 1.1rem;
+  }
+
+  sup {
+    vertical-align: super;
+    font-size: 0.7rem;
   }
 
   th,
@@ -107,5 +102,13 @@
 }
 
 .gallery {
+  grid-area: gallery;
   background-color: $bg-color-1;
+}
+
+.light-box {
+  position:fixed;
+  background-color: rgba(0, 0, 0, 0.85);
+  inset:0;
+  @include dimensions(100vw,100vh);
 }
