--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -6,7 +6,7 @@ $bg-color-3: #e3f6f5;
 $bg-color-4:rgba(119, 136, 153, 0.211);
 $backdrop-color: rgba(0, 0, 0, 0.202);
 $nav-bg-color: #272343;
-$nav-bg-color-light: #7277d6;
+$nav-bg-color-light: #7277d6e3;
 $gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
 
 $font-color-1: #808080;
