--- a/src/Components/Misc/Controls/Controls.module.scss
+++ b/src/Components/Misc/Controls/Controls.module.scss
@@ -1,5 +1,5 @@
-@import "../../main-styles/mixins.scss";
-@import "../../main-styles/variables.scss";
+@import "../../../main-styles/mixins.scss";
+@import "../../../main-styles/variables.scss";
 
 .controls {
   padding: 0 1rem;
