--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -33,8 +33,9 @@
         position: absolute;
         inset: 120% 0px;
 
-        content: "";
         background-color: $bg-color-1;
+
+        content: "";
         transition: $transition;
       }
     }
@@ -49,24 +50,26 @@
   & button {
     all: unset;
 
-    @include dimensions(auto, 30%);
     margin-right: 2rem;
-    padding: 0.5rem;
+    padding: 0.4rem;
 
-    border: solid 1px white;
+    border: solid 1px $font-color-3;
     border-radius: 50%;
-    outline: solid 2px rgba(255, 255, 255, 0);
+    outline: solid 2px transparent;
     outline-offset: 3px;
 
     transition: $transition;
     cursor: pointer;
+
+    img {
+      margin-top:1px;
+      @include dimensions(15px, 15px);
+      filter:invert(100%);
+    }
   }
 
   & button:hover {
     outline-color: inherit;
   }
 
-  img {
-    @include dimensions(10rem, 10rem);
-  }
 }
