--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -3,6 +3,7 @@
 
 .main {
   @include dimensions(auto, 100%);
+  position: relative;
   padding: 3rem 0;
   display: flex;
   flex-direction: column;
@@ -103,8 +104,26 @@
 
 .divider {
   @include dimensions(120vw, 5rem);
+  position: fixed;
+  top:70%;
 
   background-color: $bg-color-2;
   transform: rotate(5deg) translateX(-5%);
-  z-index: -3;
+
+  z-index: -5;
+  pointer-events: none;
+  box-shadow: $shadow-2;
+
+  &::before {
+    @include dimensions(30%,20px);
+    position: absolute;
+    top:-20px;
+    left:0;
+
+    content: "";
+    background-color: rgba(215, 218, 11, 0.395);
+
+    transform: skew(50deg);
+    z-index: -6;
+  }
 }
