--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -5,6 +5,7 @@ $bg-color-2: #bae8e8;
 $bg-color-3: #e3f6f5;
 $bg-color-4:rgba(119, 136, 153, 0.211);
 $backdrop-color: rgba(0, 0, 0, 0.202);
+$backdrop-color-2:rgba(0, 0, 0, 0.85);
 $nav-bg-color: #272343;
 $nav-bg-color-light: #7277d6e3;
 $gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
