--- a/src/Components/Auth/Auth.module.scss
+++ b/src/Components/Auth/Auth.module.scss
@@ -3,14 +3,17 @@
 
 .main {
   @include dimensions(100%, max-content);
-  padding:2rem 0;
+  padding: 2rem 0;
 
   font-family: $text-font;
   background-color: $bg-color-1;
 
   section {
-    @include dimensions(clamp(200px, 25%, 350px), max-content);
-    margin:auto;
+    @include dimensions(clamp(400px, 60%, 800px), clamp(500px, 95vh, 700px));
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+    margin: auto;
     padding: 1.5rem 1rem;
 
     text-align: center;
@@ -44,13 +47,84 @@
       text-decoration: underline;
       text-underline-offset: 3px;
     }
+
+    & > div {
+      @include dimensions(50%, 100%);
+    }
+  }
+
+  & form {
+    display: flex;
+    row-gap: 1rem;
+
+    & input[type="text"],
+    & input[type="password"] {
+      @include dimensions(70%, auto);
+      margin-top: 0.5rem;
+      padding: 0.7rem;
+
+      text-align: center;
+      color: $font-color-3;
+      background-color: $nav-bg-color-light;
+      border: none;
+      border-radius: 25px;
+
+      outline: none;
+      outline: 2px solid transparent;
+      outline-offset: 3px;
+
+      transition: $transition;
+
+      &:focus {
+        outline: 2px solid $font-color-1;
+      }
+    }
+
+    & input[type="checkbox"] {
+      @include dimensions(15px, 15px);
+      cursor: pointer;
+
+      accent-color: $nav-bg-color-light;
+    }
+
+    & input[type="checkbox"] ~ label {
+      line-height: 1.2rem;
+      cursor: pointer;
+    }
+
+    & button {
+      width: 100px;
+      margin: 0 0.5rem;
+      padding: 0.5rem;
+
+      color: $font-color-3;
+      background-color: $nav-bg-color-light;
+      border: none;
+      border-radius: 25px;
+
+      font-family: $text-font;
+      font-size: 1rem;
+
+      transition: $transition;
+      cursor: pointer;
+
+      &:focus,
+      &:hover,
+      &:active {
+        box-shadow: $shadow-inset;
+      }
+
+      & img {
+        @include dimensions(20px, 15px);
+
+        filter: invert(100%);
+      }
+    }
   }
 }
 
 .login {
-  display: flex;
   flex-direction: column;
-  row-gap: 1rem;
 
   text-align: center;
   color: $font-color-2;
@@ -59,61 +133,16 @@
     @include dimensions(100%, auto);
   }
 
-  & input {
-    @include dimensions(60%, auto);
-    margin-top: 0.5rem;
-    padding: 0.7rem;
-
-    color: white;
-    background-color: $nav-bg-color-light;
-    border: none;
-    border-radius: 25px;
-
-    outline: none;
-    outline: 2px solid transparent;
-    outline-offset: 3px;
-
-    transition: $transition;
-
-    &:focus {
-      outline: 2px solid $font-color-1;
-    }
-  }
-
-  & button {
-    width: 100px;
-    margin: 0 0.5rem;
-    padding: 0.5rem;
-
-    color: $font-color-3;
-    background-color: $nav-bg-color-light;
-    border: none;
-    border-radius: 25px;
-
-    font-family: $text-font;
-    font-size: 1rem;
-
-    transition: $transition;
-    cursor: pointer;
-
-    &:focus,
-    &:hover,
-    &:active {
-      box-shadow: $shadow-inset;
-    }
-
-    & img {
-      @include dimensions(20px, 15px);
-
-      filter: invert(100%);
-    }
+  & > div:last-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 5px;
   }
 }
 
 .register {
-  display: flex;
   flex-flow: row wrap;
-  row-gap: 1rem;
 
   justify-content: center;
 
@@ -128,54 +157,20 @@
   & > div:nth-child(2) {
     @include dimensions(50%, auto);
   }
-
-  & input {
-    @include dimensions(70%, auto);
-    margin-top: 0.5rem;
-    padding: 0.7rem;
-
-    color: white;
-    background-color: $nav-bg-color-light;
-    border: none;
-    border-radius: 25px;
-
-    outline: none;
-    outline: 2px solid transparent;
-    outline-offset: 3px;
-
-    transition: $transition;
-
-    &:focus {
-      outline: 2px solid $font-color-1;
-    }
+  & > div:nth-last-child(2) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 5px;
   }
+}
 
-  & button {
-    width: 100px;
-    margin: 0 0.5rem;
-    padding: 0.5rem;
+.side-image {
+  border-radius: 25px;
+  overflow: hidden;
 
-    color: $font-color-3;
-    background-color: $nav-bg-color-light;
-    border: none;
-    border-radius: 25px;
-
-    font-family: $text-font;
-    font-size: 1rem;
-
-    transition: $transition;
-    cursor: pointer;
-
-    &:focus,
-    &:hover,
-    &:active {
-      box-shadow: $shadow-inset;
-    }
-
-    & img {
-      @include dimensions(20px, 15px);
-
-      filter: invert(100%);
-    }
+  & img {
+    @include dimensions(100%,100%);
+    object-fit:cover;
   }
 }
