--- a/src/Components/Create/Create.module.scss
+++ b/src/Components/Create/Create.module.scss
@@ -1,14 +1,149 @@
 @import "../../main-styles/mixins.scss";
 @import "../../main-styles/variables.scss";
 
-.form-wrapper {
-    @include dimensions(clamp(400px,80%,1300px),max-content);
-    margin:2rem auto;
+.main {
+  @include dimensions(100%, max-content);
+  padding: 2rem 0;
+  font-family: $link-font;
+  color: $font-color-3;
+
+  & section {
+    @include dimensions(clamp(400px, 70%, 1200px), 100%);
+    margin: auto;
+    padding: 2rem;
+
+    background-color: $bg-color-4;
     border-radius: 25px;
     box-shadow: $shadow-2;
-    background-color: $bg-color-4;
+    text-align: center;
+    color: $font-color-1;
 
-    & form {
-        border:solid red 1px;
+    h2,
+    h3 {
+      font-size: 1.7rem;
+      font-weight: 600;
     }
+
+    h3 {
+      margin: 1rem 0;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid $bg-color-4;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1.1rem;
+    }
+
+    form {
+      @include dimensions(100%, 100%);
+
+      & > button {
+        all: unset;
+
+        width: 100px;
+        margin: 2rem 0.5rem;
+        padding: 0.5rem;
+
+        background-color: $nav-bg-color-light;
+
+        text-align: center;
+        color: $font-color-3;
+        font-family: $text-font;
+
+        border-radius: 25px;
+        cursor: pointer;
+        transition: $transition;
+      }
+
+      select:hover,
+      select:focus,
+      button:hover,
+      button:focus,
+      input:hover,
+      input:focus {
+        box-shadow: $shadow-inset;
+      }
+    }
+  }
+}
+
+.data-form {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 1rem;
+
+  & > div {
+    @include dimensions(12rem, 7rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+
+    & > div {
+      @include dimensions(100%, 40%);
+      position: relative;
+      overflow: hidden;
+
+      & img {
+        @include dimensions(15px, 15px);
+        position: absolute;
+        top: 50%;
+        right: 1rem;
+        transform: translateY(-50%);
+
+        pointer-events: none;
+        filter: invert(100%);
+      }
+    }
+
+    label {
+      margin: 0.5rem 0;
+
+      color: $font-color-1;
+    }
+
+    select,
+    input {
+      @include dimensions(100%, 100%);
+      position: relative;
+      appearance: none;
+      padding-left: 1rem;
+      border: none;
+      outline: none;
+      overflow: auto;
+      cursor: pointer;
+
+      color: $font-color-3;
+      background: $nav-bg-color-light;
+      font-family: $text-font;
+      font-size: 1rem;
+    }
+
+    input::placeholder {
+      color: $font-color-3;
+    }
+    select,input,button {
+      transition: $transition;
+    }
+  }
+
+  & > div:nth-last-child(2) {
+    @include dimensions(100%, 80%);
+    text-align: center;
+    & textarea {
+      @include dimensions(80%, 100%);
+      max-width: 100%;
+      min-width: 50%;
+      min-height: 100px;
+      border: none;
+      outline: none;
+      padding: 0.5rem;
+      margin: auto;
+      font-family: $text-font;
+      resize: vertical;
+      color: $font-color-2;
+      font-weight: 600;
+    }
+  }
 }
