--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -18,7 +18,7 @@ $link-font: "Raleway", sans-serif;
 $text-font: "Nunito", sans-serif;
 $error-font:'Special Elite', sans-serif;
 
-$shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+$shadow:rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;;
 $shadow-2: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
   rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 $shadow-inset:rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
