--- a/src/Components/Create/Create.module.scss
+++ b/src/Components/Create/Create.module.scss
@@ -18,13 +18,13 @@
     text-align: center;
     color: $font-color-1;
 
-    h2,
-    h3 {
+    h2{
       font-size: 1.7rem;
-      font-weight: 600;
     }
-
+    
     h3 {
+      font-weight: 600;
+      font-size: 1.7rem;
       margin: 1rem 0;
       padding-bottom: 1rem;
       border-bottom: 2px solid $bg-color-4;
@@ -121,7 +121,7 @@
     }
 
     input::placeholder {
-      color: $font-color-3;
+      color: $placeholder-color;
     }
     select,input,button {
       transition: $transition;
