--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -13,10 +13,10 @@ $gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
 $font-color-1: #808080;
 $font-color-2: #0e0e0e;
 $font-color-3: #ffffff;
+$placeholder-color:#bebebe;
 
 $link-font: "Raleway", sans-serif;
 $text-font: "Nunito", sans-serif;
-$error-font:'Special Elite', sans-serif;
 
 $shadow:rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;;
 $shadow-2: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
