created user profile page

--- a/src/Components/Edit/Edit.module.scss
+++ b/src/Components/Edit/Edit.module.scss
@@ -120,32 +120,44 @@
         }
       }
 
-      & > button {
-        all: unset;
+      
+      & > div:nth-last-child(1){
+        & > button {
+          width: 100px;
+          margin: 2rem 0.5rem;
+          padding: 0.5rem 1rem;
+          
+          text-align: center;
+          color: $font-color-3;
+          font-family: $text-font;
+          font-weight: 600;
+          
+          background-color: $nav-bg-color-light;
+          border:none;
+          border-radius: 25px;
+          cursor: pointer;
+          transition: $transition;
 
-        width: 100px;
-        margin: 2rem 0.5rem;
-        padding: 0.5rem;
-
-        background-color: $nav-bg-color-light;
-
-        text-align: center;
-        color: $font-color-3;
-        font-family: $text-font;
-
-        border-radius: 25px;
-        cursor: pointer;
-        transition: $transition;
+          &:active {
+            cursor:progress;
+          }
+        }
+        & button:nth-child(1):hover{
+          background-color: rgb(159, 17, 17);
+        }
+        & button:nth-child(2):hover{
+          background-color: rgb(24, 94, 24);
+        }
       }
+          select:hover,
+          select:focus,
+          button:hover,
+          button:focus,
+          input:hover,
+          input:focus {
+            box-shadow: $shadow-inset;
+          }
 
-      select:hover,
-      select:focus,
-      button:hover,
-      button:focus,
-      input:hover,
-      input:focus {
-        box-shadow: $shadow-inset;
-      }
     }
   }
 }
