tweaks on backend, connected create and update pages to api

--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -2,7 +2,7 @@
 @import "../../main-styles/variables.scss";
 
 .main {
-  @include dimensions(clamp(500px, 85%, 1100px), max-content);
+  @include dimensions(clamp(500px, 85%, 1030px), max-content);
   margin: 2rem auto;
 }
 
@@ -31,12 +31,13 @@
   & > div:nth-child(4) {
     grid-area: contacts;
   }
+
 }
 
 .contacts,
 .description,
 .technicals {
-  padding: 1rem;
+  padding: 1rem ;
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
@@ -64,6 +65,11 @@
 
     border-bottom: 2px solid $bg-color-4;
   }
+
+  span {
+    word-break:break-all;
+  }
+
 }
 
 .description {
