--- a/src/Components/Profile/Profile.module.scss
+++ b/src/Components/Profile/Profile.module.scss
@@ -84,9 +84,11 @@
     }
 
     p:nth-child(1) {
+      margin-bottom: 1.3rem;
+      
       font-weight: 600;
       color: $font-color-2;
-      margin-bottom: 1.3rem;
+      text-transform: capitalize;
     }
   }
 }
